--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "adf-builder": "^3.3.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "firebase": "^5.2.0",
     "jwt-simple": "^0.5.1",
     "randomstring": "^1.1.5",
     "stride-node-client": "^0.2.0"
