--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
   "dependencies": {
     "adf-builder": "^3.3.0",
     "body-parser": "^1.18.3",
+    "browserify": "^16.2.2",
+    "cors": "^2.8.4",
+    "dotenv": "^6.0.0",
+    "envify": "^4.1.0",
     "express": "^4.16.3",
     "firebase": "^5.2.0",
     "jwt-simple": "^0.5.1",
     "randomstring": "^1.1.5",
+    "simple-xdm": "^1.0.12",
     "stride-node-client": "^0.2.0"
   },
   "engines": {
